# xdg-open-server

./: LICENSE  Makefile  Makefile.am  PKGBUILD  README.md  autogen.sh  configure.ac  main.c  xdg-open-server.desktop
scripts/: xdg-open.sh
